syntax = "proto3";
package lazyeval;


option java_package = "be.heydari.parsers.protobuf.generated";
option java_outer_classname = "PBooleanExpression";
option java_multiple_files = true;

message PDisjunction {
  repeated PConjunction conjunctions = 1;
}

message PConjunction {
  repeated PBooleanPredicate boolean_predicates = 1;
  repeated PStringPredicate string_predicates = 2;
  // numbers
  repeated PIntPredicate int_predicates = 3; // int
  repeated PLongPredicate long_predicates = 4; // long
  repeated PFloatPredicate float_predicates = 5; // float
  repeated PDoublePredicate double_predicates = 6; // double
}

message PBooleanPredicate {
  PRefExpression left = 1;
  bool right = 2;
  string operator = 3;
}

message PStringPredicate {
  PRefExpression left = 1;
  string right = 2;
  string operator = 3;
}

message PIntPredicate {
  PRefExpression left = 1;
  int32 right = 2;
  string operator = 3;
}

message PLongPredicate {
  PRefExpression left = 1;
  int64 right = 2;
  string operator = 3;
}

message PFloatPredicate {
  PRefExpression left = 1;
  float right = 2;
  string operator = 3;
}

message PDoublePredicate {
  PRefExpression left = 1;
  double right = 2;
  string operator = 3;
}

message PRefExpression {
  string table = 1;
  string column = 2;
}


